# auto-lab

./: .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  bd.py  db.sqlite3  main.py  my_interface.h  realization.cpp  server.crt  server.key  testing.cpp
admin/: ai.py  auth_browser.py  cookies.json  main.py
admin/services/: ai.py
admin/templates/: admin.html
app/: main.py  requirements.txt
app/api/: auth.py  group.py  labs.py  tasks.py
app/core/: config.py  dependencies.py  security.py
app/schemas/: student.py  test.py
app/services/: analyze_test_service.py  grade_service.py  lint_service.py  neural_verdict.py  task_service.py  test_service.py
app/templates/: admin.html  group.html  main.html  script.js  style.css  tasks.html  test.html  upl_tasks.html  upload_tasks.html
app/utils/: db_service.py  db_utils.py  file_utils.py  hash_utils.py  init_utils.py  tests_utils.py
static/: admin.css  admin.js  env.js  group_students.css  group_students.js  header.css  main.css  main.js  notification.css  notification.js  tasks.css  tasks.js  upload_tasks.css  upload_tasks.js
testing/: CMakeLists.txt  main.cpp  userfile.cpp
testing/configs/: .clang-tidy  CMakeLists.txt
testing/configs/LR4/: interface.h  testing.cpp
